istio/frontend-peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  mtls:
    mode: STRICT
