istio/backend-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend
spec:
  host: backend.DATA_PLANE.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
