istio/frontend-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend
spec:
  host: frontend.DATA_PLANE.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
